# QT6_Beginer

./: CMakeLists.txt  buildScript.sh
QT6_Beginer/: CMakeLists.txt
QT6_Beginer/QtApvTool/src/: main.cpp
QtApvTool/inc/: oapv_app_args.h  oapv_app_util.h  oapv_app_y4m.h
QtApvTool/src/: main.cpp
inc/: oapv.h
inc/oapv/: oapv_exports.h
pkgconfig/: oapv.pc.in
